--- a/src/web/templates/login_screen.html
+++ b/src/web/templates/login_screen.html
@@ -3,10 +3,11 @@
 
 {% block head %}
 <title>login</title>
+
 {% endblock %}
 
 {% block body %}
-<h2>Login</h2>
+<h2>Login to account</h2>
 
 <form method="post" action="/login">
     <label for="username">Username:</label>
@@ -16,6 +17,8 @@
     <input type="text" id="password" name="password" required>
     <br>
     <button type="submit">Login</button>
+    <button onclick="history.back()">Go Back</button>
+
 </form>
 
 {% endblock %}
