--- a/src/web/templates/register.html
+++ b/src/web/templates/register.html
@@ -15,6 +15,7 @@
     <input type="text" id="password" name="password" required>
     <br>
     <button type="submit">Register</button>
+    <button onclick="history.back()">Go back</button>
 </form>
 
 
