--- a/src/web/templates/basic.html
+++ b/src/web/templates/basic.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {% block head %}{% endblock %}
+    <title>{% block title %}Movie Recommedator{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body>
-    {% block body %}{% endblock %}
+<body class="d-flex align-items-center justify-content-center vh-100">
+    <div class="container text-center">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
