--- a/src/web/templates/login_screen.html
+++ b/src/web/templates/login_screen.html
@@ -1,24 +1,19 @@
 {% extends 'basic.html' %}
 
+{% block title %}Login{% endblock %}
 
-{% block head %}
-<title>login</title>
-
-{% endblock %}
-
-{% block body %}
-<h2>Login to account</h2>
-
-<form method="post" action="/login">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="password">Password: </label>
-    <input type="text" id="password" name="password" required>
-    <br>
-    <button type="submit">Login</button>
-    <button onclick="history.back()">Go Back</button>
-
+{% block content %}
+<h2 class="mb-4">Login</h2>
+<form method="POST" action="/login" class="w-50 mx-auto">
+    <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" id="username" name="username" class="form-control" required>
+    </div>
+    <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" id="password" name="password" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
-
+<p class="mt-3">Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
 {% endblock %}
