--- a/src/web/templates/register.html
+++ b/src/web/templates/register.html
@@ -1,22 +1,19 @@
 {% extends 'basic.html' %}
 
-{% block head %}
-<title>Creating an Account</title>
-{% endblock %}
+{% block title %}Register{% endblock %}
 
-{% block body %}
-<h2>Register</h2>
-
-<form method="post" action="/register">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="password">Password: </label>
-    <input type="text" id="password" name="password" required>
-    <br>
-    <button type="submit">Register</button>
-    <button onclick="history.back()">Go back</button>
+{% block content %}
+<h2 class="mb-4">Create an Account</h2>
+<form method="POST" action="/register" class="w-50 mx-auto">
+    <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" id="username" name="username" class="form-control" required>
+    </div>
+    <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" id="password" name="password" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-success">Register</button>
 </form>
-
-
+<p class="mt-3">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
 {% endblock %}
