--- a/src/web/templates/basic.html
+++ b/src/web/templates/basic.html
@@ -7,6 +7,7 @@
     <title>{% block title %}Movie Recommedator{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100">
     <div class="container text-center">
