--- a/src/web/templates/login_screen.html
+++ b/src/web/templates/login_screen.html
@@ -11,9 +11,22 @@
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" id="password" name="password" class="form-control" required>
+        <div>
+            <input type="password" id="password" name="password" class="form-control" required>
+            <input type="checkbox" onclick="togglePassword()">Show password
+        </div>
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
+<script>
+    function togglePassword() {
+        var passwordField = document.getElementById("password");
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+        } else {
+            passwordField.type = "password";
+        }
+    }
+</script>
 <p class="mt-3">Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
 {% endblock %}
