implemented adding group members

--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -22,7 +22,7 @@
 
   <h3 class="mt-4">Your Group Members: </h3>
   <ul class="list-group">
-    {% for member in group_member %}
+    {% for member in group_members %}
       <li class="list-group-item">{{ member }}</li>
     {% endfor %}
   </ul>
