Fixed bugs and finished adding groups functionality

--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div> class="container mt-4 "
+<div class="container mt-4">
   {% if new_user %}
     <h2>Welcome to the Movie Recommedator </h2>
     <p>We need some information to be provided</p>
