Fixed bugs for viewer results page

--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -18,7 +18,8 @@
         <input type="text" id="addUser" name="addUser" class="form-control" required>
       </div>
       <button type="submit" class="btn btn-secondary">Add User</button>
-      <a href="{{ url_for('register')}}" class="btn btn-primary">Create User</a>
+      <a href="{{ url_for('register') }}" class="btn btn-primary">Create User</a>
+      <a href="{{ url_for('results') }}" class="btn btn-success">View Results</a>
     </form>
 
   <h3 class="mt-4">Your Group Members: </h3>
