Finished the project

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1 class="mb-4">Welcome to My Flask App</h1>
+<h2 class="mb-4">Welcome to CrewUp</h2>
 <p>Select an option:</p>
 <div>
     <a href="{{ url_for('login') }}" class="btn btn-primary btn-lg">Login</a>
